Fix tests and benchmarks