@@ -23,6 +23,7 @@
 
 package org.openjdk.bench.java.lang.stable;
 
+import jdk.internal.lang.StableValue;
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.BenchmarkMode;
 import org.openjdk.jmh.annotations.Fork;
@@ -50,7 +51,7 @@ import java.util.stream.Collectors;
 @State(Scope.Thread)
 @Warmup(iterations = 5, time = 1)
 @Measurement(iterations = 5, time = 1)
-@Fork(value = 2, jvmArgsAppend = "--enable-preview")
+@Fork(value = 2, jvmArgsAppend = {"--add-exports=java.base/jdk.internal.lang=ALL-UNNAMED", "--enable-preview"})
 /*
 Benchmark                     Mode  Cnt  Score   Error  Units
 LazyPropertiesBenchmark.chm   avgt   10  5.263 ? 1.105  ns/op
